@@ -234,7 +234,7 @@
 
 #loading
   :float right
-  :margin 2px 0px 0px 0px
+  :margin 7px 5px 0px 0px
 
 // Single-row lists.
 //------------------------------------------------------------------------------
