@@ -7,5 +7,6 @@
 .list#leads
   - unless @leads.empty?
     = render :partial => "lead", :collection => @leads
+    = render :partial => "common/ajax_paginate"
   - else
     %div== You don't have any leads yet. Feel free to #{link_to_remote("create new lead", :url => new_lead_path)}.
