@@ -202,7 +202,7 @@
 
 #loading {
   float: right;
-  margin: 2px 0px 0px 0px; }
+  margin: 7px 5px 0px 0px; }
 
 .log {
   padding: 8px 0px 0px 0px; }
