@@ -41,7 +41,7 @@
   source = %w(campaign cold_call conference online referral self web word_of_mouth other) << ""
   status = %w(new contacted converted rejected) << ""
 
-  for i in (1..20) do
+  for i in (1..120) do
 %>
 lead<%= i %>:
   id          : <%= i %>
